# MiniRT

./: .gitignore  Base  CMakeLists.txt  Makefile  README.md  a.c  a.out  branchTests  camera.c  chihaja.cpp  color.c  cy.rt  cylinder.c  event.c  event_utils.c  ft_matrix.c  hamid  hhh.c  leaks.sh  main.c  math_operations.c  math_utils.c  miniRT  miniRT.h  note.md  old  out.pgm  plane.c  rendring.c  rotation_utils.c  shade.c  sphere.c  test.c  test.cpp  test.rt  testrender.c
Dowing/: camera.c  plane.c  ray.c
Draw/: drawing.c
Event/: event.c  event_utils.c
Execution/: color.c  ft_matrix.c  math_operations.c  math_utils.c  rendring.c  rotation.c  shade.c  update_matrix.c  utils.c
Functions/: MathOperations.c  fixedpoint.c  intersectRaySphere.c
Get_next_line/: get_next_line.c  get_next_line.h
Include/: miniRT.h  structs.h
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_free_array.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin_free_s1.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  ft_swap_double.c  ft_tolower.c  ft_toupper.c  libft
Main/: main.c
Parssing/: fill_data.c  fill_info.c  free_mini.c  get_data_part1.c  get_data_part2.c  rt_last_node.c  set_data.c
Prsing/: free_mini.c  get_data_part1.c  get_data_part2.c  rt_node_last.c  set_data.c
Shape/: Rotation.c  color.c  cylinder.c  plane.c  rendring.c  shade.c  sphere.c  utils.c
get_next_line/: get_next_line.c  get_next_line.h  test.rt
libft/: Makefile  a.out  ft_arraylen.c  ft_atod.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_free_array.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_str_begin_to_fin.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  (+15 more)
(+143 files in other folders)
