cmake_minimum_required(VERSION 3.24)
project(donemin C)

set(CMAKE_C_STANDARD 11)

include_directories(get_next_line)
include_directories(Include)
include_directories(libft)

add_executable(donemin
        get_next_line/get_next_line.c
        get_next_line/get_next_line.h
        Include/miniRT.h
        Include/structs.h
        libft/ft_arraylen.c
        libft/ft_atod.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_free_array.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back_bonus.c
        libft/ft_lstadd_front_bonus.c
        libft/ft_lstclear_bonus.c
        libft/ft_lstdelone_bonus.c
        libft/ft_lstiter_bonus.c
        libft/ft_lstlast_bonus.c
        libft/ft_lstmap_bonus.c
        libft/ft_lstnew_bonus.c
        libft/ft_lstsize_bonus.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_str_begin_to_fin.c
        libft/ft_strchr.c
        libft/ft_strcmp.c
        libft/ft_strdup.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free_s1.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        Parssing/fill_data.c
        Parssing/fill_info.c
        Parssing/free_mini.c
        Parssing/get_data_part1.c
        Parssing/get_data_part2.c
        Parssing/rt_last_node.c
        Parssing/set_data.c
        Shape/color.c
        Shape/cylinder.c
        Shape/plane.c
        Shape/rendring.c
        Shape/Rotation.c
        Shape/shade.c
        Shape/sphere.c
        ft_matrix.c
        main.c
        math_operations.c
        math_utils.c event.c rotation_utils.c event_utils.c)
